--- a/INTERFACE/templates/INTERFACE/contacts_list.html
+++ b/INTERFACE/templates/INTERFACE/contacts_list.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="row">
-    <div class="dropdown">
+    <div class="dropdown px-2">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Models
       </button>
