--- a/INTERFACE/templates/INTERFACE/analysisararview_list.html
+++ b/INTERFACE/templates/INTERFACE/analysisararview_list.html
@@ -7,15 +7,15 @@
     {% for obj in page_obj %}
     <tr>
       <th class="lead">{{ forloop.counter }}</th>
+      <th class="lead">{{ obj.analysis_id }}</th>
       <th class="lead">{{ obj.material_sample_id }}</th>
       <th class="lead">{{ obj.location_id }}</th>
       <th class="lead">{{ obj.decimal_latitude }}</th>
       <th class="lead">{{ obj.decimal_longitude }}</th>
       <th class="lead">{{ obj.elevation_in_meters }}</th>
-      <th class="lead">{{ obj.barometric_elevation_in_meters }}</th>
       <th class="lead">{{ obj.verbatim_locality }}</th>
       <th class="lead">{{ obj.field_mission_id }}</th>
-      <th class="lead">{{ obj.analysed_by }}</th>
+      <th class="lead">{{ obj.sampling_date }}</th>
       <th class="lead">{{ obj.sampling_date }}</th>
       <th class="lead">{{ obj.simple_lithology_description }}</th>
       <th class="lead">{{ obj.alteration_facies }}</th>
@@ -24,6 +24,23 @@
       <th class="lead">{{ obj.current_storage }}</th>
       <th class="lead">{{ obj.comment }}</th>
       <th class="lead">{{ obj.number_36ar_fv_field }}</th>
+      <th class="lead">{{ obj.uncertainty_36ar_1s_field }}</th>
+      <th class="lead">{{ obj.number_37ar_fv_field }}</th>
+      <th class="lead">{{ obj.uncerainty_37ar_1s_field }}</th>
+      <th class="lead">{{ obj.number_38ar_fv_field }}</th>
+      <th class="lead">{{ obj.uncertainty_38ar_field }}</th>
+      <th class="lead">{{ obj.number_39ar_fv_field }}</th>
+      <th class="lead">{{ obj.uncertainty_39ar_1s_field }}</th>
+      <th class="lead">{{ obj.number_40ar_fv_field }}</th>
+      <th class="lead">{{ obj.number_1s_40ar_field }}</th>
+      <th class="lead">{{ obj.age_ma_field }}</th>
+      <th class="lead">{{ obj.uncertainty_age_2s_ma_field }}</th>
+      <th class="lead">{{ obj.number_40ar_field }}</th>
+      <th class="lead">{{ obj.number_39ar_field }}</th>
+      <th class="lead">{{ obj.ca_k }}</th>
+      <th class="lead">{{ obj.uncertainty_ca_k_1s_field }}</th>
+      <th class="lead">{{ obj.cl_k }}</th>
+      <th class="lead">{{ obj.uncertainty_cl_k_1s_field }}</th>
       <th class="lead">{{ obj.location_on_gis }}</th>
     </tr>
   {% endfor %}
