--- a/INTERFACE/templates/INTERFACE/samples_list.html
+++ b/INTERFACE/templates/INTERFACE/samples_list.html
@@ -1,115 +1,28 @@
-{% extends "base.html" %}
+{% extends "view_base.html" %}
 {% load static %}
 {% load interfacetags %}
 
-{% block content %}
-<div class="container">
-  <div class="row my-5">
-      <div class="col-6 mx-auto text-center">
-          <h1 class="h1">
-            {% for object in page_obj %}
-              {% if forloop.counter == 1 %}
-                {{ object | to_class_name }} Data
-              {% endif %}
-            {% endfor %}
-          </h1>
-      </div>
-  </div>
+{% block inner_content %}
+  <tbody>
+    {% for obj in page_obj %}
+      <tr>
+        <th scope="row">{{ forloop.counter }}</th>
+        <td>{{ obj.material_sample_id }}</td>
+        <td>{{ obj.sampling_location_id }}</td>
+        <td>{{ obj.sample_type }}</td>
+        <td>{{ obj.first_sample_aim }}</td>
+        <td>{{ obj.second_sample_aim }}</td>
+        <td>{{ obj.associated_lithologic_observation }}</td>
+        <td>{{ obj.associated_formation }}</td>
+        <td>{{ obj.associated_measure_id }}</td>
+        <td>{{ obj.sampling_date }}</td>
+        <td>{{ obj.sampled_by }}</td>
+        <td>{{ obj.sample_remarks }}</td>
+        <td>{{ obj.storage }}</td>
+        <td>{{ obj.igsn }}</td>
 
-  <div class="row">
-    <div class="dropdown px-2">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Models
-      </button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="{% url 'INTERFACE:sample_model' %}">Samples</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:contacts_model' %}">Contacts</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:lexicon_follies_model' %}">LexiconFossils</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:test_fields_names' %}">Test</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:test_fields_names_new' %}">Test New</a>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Views
-      </button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="{% url 'INTERFACE:field_missions_view' %}">Field Missions</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_ar_ar_view' %}">Analysis AR/AR</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_fission_tracks_view' %}">Analysis Fission Tracks</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:contacts_view' %}">Contacts</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:analysis_UHe_view' %}">Analysis U/HE</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:lithology_description_view' %}">Lithology Description</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:location_view' %}">Location</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:measurements_lines_view' %}">Measurement Lines</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:measurements_planes_view' %}">Measurement Planes</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:missions_view' %}">Missions</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:sample_sections_view' %}">Sample Sections</a>
-        <a class="dropdown-item" href="{% url 'INTERFACE:samples_view' %}">Samples</a>
-      </div>
-    </div>
-  </div>
-
-    <table class="table table-striped my-5">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Material Sample ID</th>
-          <th scope="col">Sampling Location ID</th>
-          <th scope="col">Sample Type</th>
-          <th scope="col">First Sample Aim</th>
-          <th scope="col">Second Sample Aim</th>
-          <th scope="col">Associated Lithologic Observation</th>
-          <th scope="col">Associated Formation</th>
-          <th scope="col">Associated Measure ID</th>
-          <th scope="col">Sampling Date</th>
-          <th scope="col">Sampled By</th>
-          <th scope="col">Sample Remarks</th>
-          <th scope="col">Storage</th>
-          <th scope="col">Igsn</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for sample in page_obj %}
-        <tr>
-          <th scope="row">{{ forloop.counter }}</th>
-          <td>{{ sample.material_sample_id }}</td>
-          <td>{{ sample.sampling_location_id }}</td>
-          <td>{{ sample.sample_type }}</td>
-          <td>{{ sample.first_sample_aim }}</td>
-          <td>{{ sample.second_sample_aim }}</td>
-          <td>{{ sample.associated_lithologic_observation }}</td>
-          <td>{{ sample.associated_formation }}</td>
-          <td>{{ sample.associated_measure_id }}</td>
-          <td>{{ sample.sampling_date }}</td>
-          <td>{{ sample.sampled_by }}</td>
-          <td>{{ sample.sample_remarks }}</td>
-          <td>{{ sample.storage }}</td>
-          <td>{{ sample.igsn }}</td>
-
-        </tr>
-      {% endfor %}
-        
-      </tbody>
-    </table>
-
-    <div class="pagination">
-      <span class="step-links">
-          {% if page_obj.has_previous %}
-              <a href="?page=1">&laquo; first</a>
-              <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-          {% endif %}
-
-          <span class="current">
-              Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-          </span>
-
-          {% if page_obj.has_next %}
-              <a href="?page={{ page_obj.next_page_number }}">next</a>
-              <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-          {% endif %}
-      </span>
-    </div>
-  </div>
-</div>
+      </tr>
+    {% endfor %}
+  </tbody>
 {% endblock %}
+      
