--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-        <!-- leaflet for maps -->
-        <link rel="stylesheet" type="text/css" href="{% static 'css/map.css' %}" />
-        <link rel="stylesheet" type="text/css" href="https:///unpkg.com/leaflet/dist/leaflet.css" />
     {% endblock %}
 
     {% block extra_css %}
@@ -33,8 +30,6 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/e98ebe1726.js" crossorigin="anonymous"></script>
-        <!-- leaflet for map -->
-        <script src="https:///unpkg.com/leaflet/dist/leaflet.js"></script>
     {% endblock %}
 
     {% block extra_js %}
@@ -90,12 +85,8 @@
 
     {% block content %}
     {% endblock%}
-
-    <div id="bottom-space">
-
-    </div>
     
-    <footer class="footer py-3 border border-black">
+    <footer class="py-3">
         <p class="m-0 text-center">Geology Database for all researchers</p>
         <p class="m-0 text-center">Visit our <a href="https://github.com/AndreasChristensen89/geology_database" aria-label="Visit the GitHub repository (opens in a new tab)"
             target="_blank" rel="noopener">GitHub</a> Repository</p>
