--- a/INTERFACE/templates/INTERFACE/map.html
+++ b/INTERFACE/templates/INTERFACE/map.html
@@ -15,6 +15,15 @@
 </div>
 
 <script type="text/javascript">
-    // document.getElementsByClassName
+    
+    function myFunction(event) {
+        id = event.currentTarget.getAttribute("data-id");
+    }
+
+    elements = document.getElementsByClassName("pop-id");
+
+    for (element of elements) {
+        element.addEventListener("click", myFunction(event));
+    }
 </script>
 {% endblock%}
