--- a/INTERFACE/templates/INTERFACE/map.html
+++ b/INTERFACE/templates/INTERFACE/map.html
@@ -10,20 +10,22 @@
 
 <div class="row">
     {% for location in locations %}
-        <a href="{% url 'INTERFACE:location_data' location.location_id %}">Link</a>
+        <a href="{% url 'INTERFACE:location_data' location.location_id %}" id="map_id_{{location.location_id}}"></a>
     {% endfor %}
 </div>
 
+<div class="row">
+    <div class="col" onclick="randomFunction()">
+        Test
+    </div>
+</div>
+
 <script type="text/javascript">
-    
-    function myFunction(event) {
+
+    function clickLink(event) {
         id = event.currentTarget.getAttribute("data-id");
-    }
-
-    elements = document.getElementsByClassName("pop-id");
-
-    for (element of elements) {
-        element.addEventListener("click", myFunction(event));
+        document.getElementById(`map_id_${id}`).click();
     }
 </script>
+
 {% endblock%}
